--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Login</title>
@@ -23,7 +23,7 @@
                 <img class="imagen" src="img/compania01.png" width="183" height="30" alt="compañia 1" />
                 <img class="imagen" src="img/compania02.png" width="72" height="30" alt="compañia 2" />
                 <a class="texto">OFERTAS ESPECIALES</a>
-           	</div>  
+           	</div>
             <div class="bolsa">
                 <div class="titulo">Compras</div>
                 <div class="imagen">
@@ -31,7 +31,7 @@
                     <div class="texto">Finalizar Compra</div>
                </div>
            	</div>
-            <div class="telefonica"></div> 
+            <div class="telefonica"></div>
     	</div>
 	<div class="encabezado03">
     		<div class="Menu">
@@ -44,7 +44,7 @@
             </div>
             <div class="Search">
             	<div class="texto">Buscar...</div>
-                <div class="Button"><a HREF="#"></a></div>
+                <div class="Button"><a href="#"></a></div>
             </div>
    	  </div>
 	</div>
@@ -83,9 +83,11 @@
               </table>
               </form>
         </div>
-        <div id="lo-aviso"><p></p>
+        <div id="lo-aviso">
         <p>Lee nuestro 
-        <a href="aviso.html"  class="enalceRojo"> Aviso de Privacidad</a></div>
+          <a href="aviso.html"  class="enalceRojo"> Aviso de Privacidad</a>
+        </p>
+      </div>
   </article>
 </section>
 <!-------- FOOTER ------------>
@@ -132,10 +134,10 @@
                 </ul>
             </div>
              <div class="columna">
-            	<img src="img/logo.png" width="153" height="52" alt="logo"  align="right"/> </div>
+            	<img src="img/logo.png" width="153" height="52" alt="logo"/> 
+            </div>
       		</div>
-        <div class="pie02">
-        </div>
+        <div class="pie02"></div>
 	 </div>
 </footer>
 </body>
