--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     </div>
 
                     <div class="producto">
-                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 01"/></div>
+                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 02"/></div>
                         <div class="descripcionA">
-                            <a href="producto.html">Producto 1</a>
+                            <a href="producto.html">Producto 2</a>
                         </div>
                         <div class="descripcionB">Descripción producto</div>
                         <div class="precio">$ 9,999</div>
@@ -184,9 +184,9 @@
                     </div>
 
                     <div class="producto">
-                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 01"/></div>
+                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 03"/></div>
                         <div class="descripcionA">
-                            <a href="producto.html">Producto 1</a>
+                            <a href="producto.html">Producto 3</a>
                         </div>
                         <div class="descripcionB">Descripción producto</div>
                         <div class="precio">$ 9,999</div>
@@ -196,9 +196,9 @@
                     </div>
 
                     <div class="producto">
-                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 01"/></div>
+                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 04"/></div>
                         <div class="descripcionA">
-                            <a href="producto.html">Producto 1</a>
+                            <a href="producto.html">Producto 4</a>
                         </div>
                         <div class="descripcionB">Descripción producto</div>
                         <div class="precio">$ 9,999</div>
@@ -208,9 +208,9 @@
                     </div>
 
                     <div class="producto">
-                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 01"/></div>
+                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 05"/></div>
                         <div class="descripcionA">
-                            <a href="producto.html">Producto 1</a>
+                            <a href="producto.html">Producto 5</a>
                         </div>
                         <div class="descripcionB">Descripción producto</div>
                         <div class="precio">$ 9,999</div>
@@ -220,9 +220,9 @@
                     </div>
 
                     <div class="producto">
-                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 01"/></div>
+                        <div class="foto"><img src="img/producto.png" width="150" height="200" alt="producto 06"/></div>
                         <div class="descripcionA">
-                            <a href="producto.html">Producto 1</a>
+                            <a href="producto.html">Producto 6</a>
                         </div>
                         <div class="descripcionB">Descripción producto</div>
                         <div class="precio">$ 9,999</div>
@@ -238,7 +238,7 @@
             <div class="pie">
                 <div class="pie01">
                     <div class="columna">
-                        <div class="columnaTitulo">Siguenos</div>
+                        <div class="columnaTitulo">Siguenos en nuestras redes</div>
                         <ul class="Menu">
                             <li>
                                 <a href="#">Facebook</a>
@@ -287,7 +287,7 @@
                                 <a href="#">Politicas Devolución</a>
                             </li>
                             <li>
-                                <a href="#">FQA</a>
+                                <a href="#">FAQ</a>
                             </li>
                             <li>
                                 <a href="#">Envíanos un mail</a>
