--- a/index.html
+++ b/index.html
@@ -244,7 +244,10 @@
                                 <a href="#">Facebook</a>
                             </li>
                             <li>
-                                <a href="#">Twitter</a>
+                                <a href="#">X</a>
+                            </li>
+                            <li>
+                                <a href="#">Instagram</a>
                             </li>
                             <li>
                                 <a href="#">Foursquere</a>
