modificacion de opciones index y login

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a href="login.html">Login</a>
                         </li>
                         <li>
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Inicio</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +50,7 @@
                             width="72"
                             height="30"
                             alt="compañia 2"/>
-                        <a class="texto">OFERTAS ESPECIALES</a>
+                        <a class="texto">Ofertas especiales</a>
                     </div>
                     <div class="bolsa">
                         <div class="titulo">Compras</div>
