--- a/login.html
+++ b/login.html
@@ -44,7 +44,9 @@
             </div>
             <div class="Search">
             	<div class="texto">Buscar...</div>
-                <div class="Button"><a href="#"></a></div>
+                <div class="Button">
+                  <a href="#" alt="Buscar"></a>
+                </div>
             </div>
    	  </div>
 	</div>
